# trace-client

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/trace/: trace.h
jenkins/: build.bat  build.sh  ver.sh
src/TestAyxiaDotNet/: Class1.cs  TestAyxiaDotNet.csproj
src/TestAyxiaDotNet/Properties/: AssemblyInfo.cs
src/ayxiadotnet/: Trace.cs  ayxiadotnet.csproj
src/ayxiadotnet/Properties/: AssemblyInfo.cs
src/java/: CMakeLists.txt  main.cpp  pom.xml
src/java/jni/: CMakeLists.txt  main.c
src/java/src/main/java/com/ayxia/trace/: AyxiaTraceAppender.java  JNITrace.java  LoggerImpl.java
src/java/src/main/java/org/slf4j/impl/: StaticLoggerBinder.java
src/java/src/main/resources/: logback.xml
src/java/src/test/java/com/ayxia/trace/: TestJNITrace.java
src/sample_c/: CMakeLists.txt  sample_c.c
src/sample_cpp/: CMakeLists.txt  sample_cpp.cpp
src/tests/: CMakeLists.txt  tests.cpp
src/trace/: CMakeLists.txt  context.cpp  context.h  format.cpp  format.h  main.cpp  trace.cpp
